cluster/overlays/zahariev.com/taskboard/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskboard
  namespace: taskboard
spec:
  template:
    spec:
      containers:
      - name: taskboard
