cluster/overlays/zahariev.com/taskboard/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboard
  namespace: taskboard
spec:
  rules:
  - host: taskboard.zahariev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskboard
            port:
              number: 8800
  tls:
  - hosts:
    - taskboard.zahariev.com
    secretName: taskboard-tls
